FIX [@santihsdev]: Update test cases to solve conflicts of mocking